# neon-seren-migrator

./: .gitignore  CHANGELOG.md  Cargo.toml  GITHUB_RENAME_STEPS.md  README-MongoDB.md  README-PostgreSQL.md  README.md
.cargo/: audit.toml
.github/workflows/: release.yml
aws/: README.md  TESTING.md
aws/ec2/: README.md  worker.sh
aws/lambda/: handler.py  provisioner.py  test_handler.py
aws/terraform/: README.md  main.tf  outputs.tf  variables.tf
docs/: api-schema.md
src/: error.rs  interactive.rs  lib.rs  main.rs  utils.rs
src/commands/: init.rs  status.rs  sync.rs  validate.rs  verify.rs
src/migration/: dump.rs  estimation.rs  mod.rs  restore.rs
src/postgres/: connection.rs  mod.rs
src/remote/: client.rs  mod.rs  models.rs
src/replication/: mod.rs  monitor.rs  subscription.rs
src/sqlite/: converter.rs  mod.rs
tests/: integration_test.rs  sqlite_integration_test.rs
