[package]
name = "neon-seren-migrator"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Zero-downtime database migration tool from Neon to Seren using PostgreSQL logical replication"
repository = "https://github.com/serenorg/neon-seren-migrator"
readme = "README.md"
keywords = ["postgresql", "migration", "replication", "database", "neon"]
categories = ["command-line-utilities", "database"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = "0.7"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
tempfile = "3.8"
futures = "0.3"
indicatif = "0.17"
which = "6.0"
